--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Build-Depends: cmake (>= 2.6),
                libkrb5-dev | heimdal-dev,
                libssl-dev,
                libz-dev,
+               python,
                openssh-client,
                pkg-config
 Build-Depends-Indep: doxygen
